--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
+        "spatie/laravel-permission": "^6.7",
         "yoeunes/toastr": "^2.3"
     },
     "require-dev": {
