--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
         "spatie/laravel-permission": "^6.7",
+        "yajra/laravel-datatables-oracle": "^11.1",
         "yoeunes/toastr": "^2.3"
     },
     "require-dev": {
