--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^6.7",
         "yajra/laravel-datatables-oracle": "^11.1",
         "yoeunes/toastr": "^2.3"
