--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "chart.js": "^4.4.2"
+        "chart.js": "^4.4.2",
+        "laravel-echo": "^1.17.1",
+        "pusher-js": "^8.4.0-rc2"
     }
 }
